# nel_calc

./: .gitignore  LICENSE  config.json  pyproject.toml  setPath.bat
nel_calc/: __init__.py  __main__.py  commands.py  customSim.py  nel_aux.py
nel_calc/exe/: main.py  nel_config.py  test.py
samples/: calibration.json  config.json  config_new.toml  pdd.csv  preliminary_0.csv  preliminary_1.csv  preliminary_2.csv
